# brc

./: .gitignore  BrcMap.hpp  CMakeLists.txt  README.md  ThreadPool.cpp  ThreadPool.hpp  brc.cpp  data-generator.py
